<resources>
    <string name="app_name">Tourist app</string>

    <string name="title_activity_help">Помощь</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_marks_multi_choice">Метки</string>
    <string name="title_activity_selected_photo">Фото</string>

    <string name="content_description_selected_photo">Выбранное фото</string>
    <string name="hint_photo_name">Название</string>
    <string name="hint_photo_description">Описание</string>
    <string name="text_new_mark_name">Название</string>
    <string name="text_new_mark_description">Описание</string>
    <string name="snackbar_close_text">Закрыть</string>
    <string name="action_mode_overlay_text">Выбрано:</string>
    <string name="reset_filter_text">Сброшен фильтр</string>
    <string name="add_photo_text">Добавлено фото</string>
    <string name="photo_text">фото</string>
    <string name="photo_taken">Снято:</string>
    <string name="mark_was_added">Метка добавлена</string>
    <string name="photo_has_not_loaded_yet">Фото еще не загрузилось</string>
    <string name="i_am_here">Я здесь</string>
    <string name="photos_by_mark_not_found">К данной метке не прикреплено ни одно фото</string>
    <string name="search">Поиск</string>
    <string name="activity_search">Поиск</string>
    <string name="search_hint">Введите текст</string>
    <string name="show_all">Показать все</string>
    <string name="mark_was_changed">Метка изменена</string>

    <!-- Menu -->

    <string name="menu_toolbar_remove_filter_text">Сбросить фильтр</string>
    <string name="menu_toolbar_remove_marks">Удалить метки</string>
    <string name="menu_toolbar_filter">Фильтр</string>
    <string name="menu_toolbar_map_marker">Показать на карте</string>
    <string name="menu_toolbar_check_confirm">Сохранить</string>
    <string name="menu_toolbar_export_to_gallery">Экспорт в галерею</string>
    <string name="menu_toolbar_bookmark">Добавить метки</string>
    <string name="menu_toolbar_reset_filter">Отобразить все</string>
    <string name="menu_toolbar_change_marks">Изменить метку</string>
    <string name="menu_toolbar_remove_photos">Удалить фото</string>

    <!-- Alert -->

    <string name="alertNewMarkTilte">Новая метка</string>
    <string name="alertNewMarkMessage">Введите название и описание</string>
    <string name="alertResultPositive">OK</string>
    <string name="alertResultNegative">Отмена</string>
    <string name="alertDeleteMarksTitle">Удаление меток</string>
    <string name="alertDeleteConfirmMessage">Вы уверены, что хотите удалить?</string>
    <string name="alertDeletePhotoTitle">Удаление фото</string>
    <string name="alertSelectedPhotoHasNotMarksTitle">Внимание!</string>
    <string name="alertSelectedPhotoHasNotMarksMessage">Пожалуйста, прикрепите хотя бы одну метку к фото, чтобы сохранить его.</string>
    <string name="alertDeleteMarksConfirmMessage">Вы уверены что хотите удалить метки? Фотографии, которые связаны с метками будут утеряны.</string>
    <string name="alertChangeMarkTilte">Изменение метки</string>
    <string name="alertChangeMarkMessage">Введите новое название и описание</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_location_update_frequency">Частота обновлений</string>
    <string-array name="pref_location_update_frequency_titles">
        <item>1 секунда</item>
        <item>2 секунды</item>
        <item>5 секунд</item>
        <item>10 секунд</item>
        <item>20 секунд</item>
        <item>1 минута</item>
    </string-array>
    <string-array name="pref_location_update_frequency_values">
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
        <item>60000</item>
    </string-array>

    <string name="pref_title_location_update_min_distance">Дистанция для обновления</string>
    <string-array name="pref_location_update_min_distance_titles">
        <item>1 метр</item>
        <item>5 метров</item>
        <item>10 метров</item>
        <item>50 метров</item>
        <item>100 метров</item>
    </string-array>
    <string-array name="pref_location_update_min_distance_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string name="pref_title_application_version">Версия 1.0</string>
    <string name="pref_title_gallery_auto_export">Добавление фото</string>
    <string name="pref_summary_gallery_auto_export">Автоматически добавлять фото в галарею</string>

    <!-- Marks by default-->

    <string name="mark_name_rest">Отдых</string>
    <string name="mark_description_rest">Здесь находятся все данные с различных поездок, отпусков, вечеринок…</string>
    <string name="mark_name_work">Работа</string>
    <string name="mark_description_work">Здесь находятся все данные, связанные с работой.</string>
    <string name="mark_name_studies">Учеба</string>
    <string name="mark_description_studies">Здесь находятся все данные, связанные с учебой.</string>
    <string name="mark_name_travel">Путеществия</string>
    <string name="mark_description_travel">Здесь находятся все данные, связанные с путеществиями.</string>
    <string name="mark_name_other">Другое</string>
    <string name="mark_description_other">Здесь находятся все данные с другой различной информацией</string>

    <!-- Navigation drawer -->

    <string name="navigation_view_open">drawer open</string>
    <string name="navigation_view_close">drawer close</string>
    <string name="navigation_item_map_name">Карта</string>
    <string name="navigation_item_search_name">Поиск</string>
    <string name="navigation_item_marks_name">Метки</string>
    <string name="navigation_item_settings_name">Настройки</string>
    <string name="navigation_item_help_name">Помощь</string>
    <string name="navigation_item_feedback_name">Обратная связь</string>

    <!-- Help -->

    <string name="tab_selected_photo_title">Фото</string>
    <string name="tab_map_title">Карта</string>
    <string name="tab_marks_title">Метки</string>
    <string name="tab_search_title">Поиск</string>
    <string name="tab_settings_title">Настройки</string>

    <string name="help_photo_text">Создавайте фотографии</string>
    <string name="help_map_text">Все фотографии отображаются на карте</string>
    <string name="help_title_text">Прикрепляйте метки к фотографиям</string>
    <string name="help_search_text">Пользуйтесь удобным поиском</string>
    <string name="help_settings_text">Настраивайте приложение под себя</string>
    <string name="feedback_app_version">Tourist app 1.0</string>
    <string name="feedback_title">Обратная связь с нами</string>
    <string name="feedback_email">anton.poltoratskii@gmail.com</string>
    <string name="feedback_text">Мы ценим Ваши отзывы и постараемся учитывать пожелания, которые Вы можете написать на нашу электронную почту</string>
    <string name="tab_feedback_title">Обратная связь</string>

</resources>
