<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item_map_marker"
        android:title="@string/menu_toolbar_map_marker"
        android:icon="@drawable/ic_map_marker"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <!--<item android:id="@+id/item_export_to_gallery"
        android:title="@string/menu_toolbar_export_to_gallery"
        android:icon="@drawable/ic_export"
        android:visible="false"
        app:showAsAction="ifRoom"/>-->
    <item android:id="@+id/item_bookmark"
        android:title="@string/menu_toolbar_bookmark"
        android:icon="@drawable/ic_bookmark_white"
        app:showAsAction="always"/>
    <item android:id="@+id/item_check_confirm"
        android:title="@string/menu_toolbar_check_confirm"
        android:icon="@drawable/ic_check"
        app:showAsAction="always"/>
</menu>