<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView android:id="@+id/image_feedback_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"/>

    <TextView
        android:id="@+id/feedback_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_app_version"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="25dp"
        android:background="@color/feedback_horizontal_divider_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_title"
        android:textColor="@color/feedback_title_color"
        android:textSize="18sp"
        android:layout_margin="25dp"/>

    <TextView
        android:id="@+id/feedback_email_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_email"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:autoLink="email"
        android:textColorLink="@color/feedback_link_color"/>

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_text"
        android:textSize="18sp"
        android:textColor="@color/feedback_title_color"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />

</LinearLayout>